[project]
name = "vartovsk"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "fastexcel>=0.14.0",
    "metar>=1.11.0",
    "metpy>=1.7.0",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "polars>=1.30.0",
    "requests>=2.32.3",
    "streamlit>=1.45.1",
    "xlrd>=2.0.1",
]
